--- a/cloth-seg/pyproject.toml
+++ b/cloth-seg/pyproject.toml
@@ -13,5 +13,6 @@ dependencies = [
     "requests>=2.32.5",
     "segmentation-models-pytorch>=0.5.0",
     "tensorboard>=2.20.0",
+    "torch>=2.9.1",
     "tqdm>=4.67.1",
 ]
