--- a/cloth-seg/pyproject.toml
+++ b/cloth-seg/pyproject.toml
@@ -5,12 +5,14 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "ipykernel>=7.1.0",
     "lightning>=2.6.0",
     "matplotlib>=3.10.7",
     "opencv-python>=4.12.0.88",
     "pandas>=2.3.3",
     "pycocotools>=2.0.10",
     "requests>=2.32.5",
+    "seaborn>=0.13.2",
     "segmentation-models-pytorch>=0.5.0",
     "tensorboard>=2.20.0",
     "torch>=2.9.1",
