--- a/face-match-age/pyproject.toml
+++ b/face-match-age/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "pandas>=2.3.3",
     "py-spy>=0.4.1",
     "requests>=2.32.5",
+    "scipy>=1.16.3",
     "tensorboard>=2.20.0",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
